--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(RobotArm)
 set(CMAKE_CXX_STANDARD 17)
 
 # 设置Eigen库的路径
-include_directories("path/to/eigen")
+include_directories("E:\\lib\\eigen-3.4.0\\Eigen")
 
 add_executable(RobotArm main.cpp)
