--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(RobotArm)
 set(CMAKE_CXX_STANDARD 17)
 
 # 设置Eigen库的路径
-include_directories("E:/lib/eigen-3.4.0/Eigen")
+include_directories("E:/lib/eigen-3.4.0")
+# include_directories("E:/lib/")
 
 add_executable(RobotArm main.cpp)
